--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
       <h2 class="h2">Hola, ¡soy un H2!</h2>
       <h2 class="h2">Hola, ¡soy otro H2!</h2>
       <h3 class="h3">Hola, ¡soy un H3!</h3>
-      <script src="/app.js"></script>
+      <script src="app.js"></script>
   </body>
 </html>
